--- a/app/src/main/res/layout/activity_showlists.xml
+++ b/app/src/main/res/layout/activity_showlists.xml
@@ -5,6 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/blue_danube">
-
+    <include layout="@layout/bottom_bar"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
