--- a/app/src/main/res/layout/bottom_bar.xml
+++ b/app/src/main/res/layout/bottom_bar.xml
@@ -9,15 +9,15 @@
     <FrameLayout
         android:id="@+id/bottom_bar"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="90dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:background="@color/paleGreen"
         />
 
     <ImageButton
         android:id="@+id/btn_home"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:contentDescription="@string/btn_home"
         app:layout_constraintBottom_toBottomOf="@id/bottom_bar"
         app:layout_constraintLeft_toLeftOf="@id/bottom_bar"
