--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="springGreen">#00FF7F</color>
     <color name="paleGreen">#98FB98</color>
     <color name="blue_danube">#01206F</color>
+    <color name="bright_grey">#E4E4E4</color>"
 </resources>
